# tabular_pytorch

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
output/: README.md
src/: kpi.py  predict.py  train.py
src/common/: keywords.py  loading.py  split_data.py  total_table_to_input_and_target_tables.py  utils.py
src/config/: config.yaml  config_predict.yaml  config_train.yaml
src/dataloader/: dataloader.py
src/models/: models.py
tests/src/: kpi_test.py  predict_test.py
