[project]
name = "tabular_pytorch"
version = "0.1.0"
description = "pytorch tabular"
dependencies = [
"numpy",
"pandas",
"torch",
"scikit-learn",
"tqdm",
"pillow",
"pyyaml",
"matplotlib",
"pytest",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
